--- a/WordCounter/Views/Games/Index.cshtml
+++ b/WordCounter/Views/Games/Index.cshtml
@@ -9,7 +9,7 @@
 <body>
 <h1>Word Count</h1>
 
-<p>Your word, @Model.GetWord(), appears (wordCount) times in the input:  </p>
+<p>Your word, @Model.GetWord, appears (wordCount) times in the input:  </p>
 <a href="/games/new">Add a new word count.</a>
 
 <form action="/games/delete" method="post">
