It works and I'm afraid to touch it because it keeps breaking

--- a/WordCounter/Views/Games/Index.cshtml
+++ b/WordCounter/Views/Games/Index.cshtml
@@ -1,21 +1,16 @@
 <!DOCTYPE html>
 <html>
 @using WordCount.Models;
+
 <head>
     <meta charset='utf-8'>
     <title>Word Games</title>
 </head>
 
 <body>
-<h1>Word Count</h1>
-  <p>Your word, @Model.GetWord(), appears @Model.RepeatCounter() times in the input: @Model.GetSentence() </p>
-  <a href="/games/new">Add a new word count.</a>
-
-
-<form action="/games/delete" method="post">
-  <button type="submit" name="button">Clear All Word Counts</button>
-</form>
-
+    <h1>Word Count</h1>
+    <p>Your word, @Model.GetWord(), appears @Model.RepeatCounter() times in the input: @Model.GetSentence() </p>
+    <a href="/games/new">Submit a new word count.</a>
 </body>
 
 </html>
